--- a/src/Data/maatschappelijk.json
+++ b/src/Data/maatschappelijk.json
@@ -3,7 +3,7 @@
     "title": "Maatschappelijk",
     "cda": [],
     "lokaal": [],
-    "nuijlies": [
+    "nujlies": [
       {
         "type": "p",
         "value": "Zorgen voor elkaar als dat kan en professionele hulp bieden waar nodig."
@@ -40,7 +40,7 @@
         "value": "Onze medeburgers met een beperking dienen wij door middel van inclusie het gevoel te geven dat ze er volledig bijhoren. Nog niet iedereen is hiervan doordrongen en onze gemeente dient, waar mogelijk en waar noodzakelijk, in samenwerking met gehandicapten- en ouderenorganisaties, een rol te spelen bij het bewustmaken van ondernemers en inwoners."
       }
     ],
-    "nuijlies": [],
+    "nujlies": [],
     "pvda": [],
     "alternatief": [],
     "vo": []
@@ -54,7 +54,7 @@
       }
     ],
     "lokaal": [],
-    "nuijlies": [
+    "nujlies": [
       {
         "type": "p",
         "value": "We willen jong en oud meer met elkaar in verbinding brengen en zo ook sociale cohesie bevorderen. Kennis en ervaring van ouderen tot zijn recht laten komen in de wereld van jongeren. Jeugdige vitaliteit waarderend inzetten voor ouderen. Jongeren die de kans krijgen om hun ideeën te delen met ouderen."
@@ -68,7 +68,7 @@
     "title": "Bevorderen van gezonde leefstijl",
     "cda": [],
     "lokaal": [],
-    "nuijlies": [
+    "nujlies": [
       {
         "type": "p",
         "value": "Gezond eten, voldoende bewegen, maatschappelijk actief zijn; zin geven aan je leven en iets betekenen voor de ander. Positief gezond zijn."
